frontend/src/style.css
/* ... */
@keyframes spin-bounce {
  0% {
    transform: rotate(0deg);
  }

  50% {
    transform: rotate(450deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.indicator.is-animated::after {
  animation: spin-bounce 2s ease-out;
}

/* текст */
.indicator__percent-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  display: flex;
  align-items: center;
  justify-content: center;

  width: 26px;
  height: 26px;
  border-radius: 50%;

  font-size: 10px;
  line-height: 1;

  background: var(--light-gray-background-20);
  z-index: 5;
}

.card__link {
  gap: 2px;
  align-items: center;
  padding: 6px 8px 8px;
  border-radius: 8px;
  color: #47433f;
  background-color: #f3f4f4;
}

.card__link svg {
  display: block;
  position: relative;
  top: 1px;
}

.card__link::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
}

.card-content {
  flex-direction: column;
  align-items: flex-start;
}

.card__price {
  margin: 0 0 4px;
  font-size: var(--small-text);
  color: var(--light-gray-text);
}

.itinerary {
  justify-content: center;
  align-items: center;
  padding: 8px 10px 12px 10px;
  background-color: #f3f4f4;
  border: 0;
  color: #3261ec;
  border-radius: 8px;
  flex-wrap: nowrap;
}

.itinerary__btn-text {
  padding-left: 2px;
  display: none;
}

.primary-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border-radius: 8px;
  padding: 8px 16px 10px;
  color: white;
  border: 0;
  background: linear-gradient(270deg, #1c3786 0%, #3261ec 100%);
}

.back-link {
  display: flex;
  width: 40px;
  height: 40px;
  padding: 0;
  align-items: center;
  justify-content: center;
  background-color: var(--dark-gray) transparent;
  border: 1px solid white;
  border-radius: 50px;
  transition: background-color .6s ease;
}

.back-link__svg-icon {
  display: block;
  line-height: 1;
  color: white;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
}

.back-link svg {
  transform: translateX(-2px);
}

.coworking-page__hero-content {
  position: relative;
  background-image: url(/photos/coworkings/meeting-point/cover.jpg);
  min-height: 184px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  align-items: flex-start;
  flex-direction: column-reverse;
}

.amenity-item {
  align-items: center;
  gap: 4px;
}

.amenity-icon {
  fill: currentColor;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
}

.amenity-icon svg,
.amenity-icon use {
  width: 100%;
  height: 100%;
}

.about-coworking .container {
  flex-direction: column;
  gap: 4px;
}

.about-coworking .container,
.amenities .container,
.gallery .container {
  padding: 0 16px;
}

.gallery-window {
  overflow: hidden;
}

.gallery__images-container {
  margin-bottom: 16px;
  gap: 4px;
  display: flex;
  transition: transform 0.6s ease;
}

.gallery__images-container img {
  width: 100%;
  flex-shrink: 0;
}

.gallery-btn {
  display: flex;
  width: 40px;
  height: 40px;
  padding: 0;
  align-items: center;
  justify-content: center;
  background-color: var(--dark-gray);
  border: 0;
  border-radius: 50px;
  transition: background-color .6s ease;
}

.gallery-btn__svg-icon.is-hidden {
  visibility: hidden;
}

.gallery-btn__svg-icon {
  display: block;
  visibility: visible;
  line-height: 1;
  color: white;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
}

.gallery-btn.prev svg {
  transform: translateX(-2px);
}

.gallery-btn.next svg {
  transform: translateX(2px);
}

.gallery__btns {
  display: flex;
  justify-content: center;
  gap: 16px;
}

.gallery-btn:disabled {
  background-color: #B8BCC0;
  cursor: not-allowed;
  pointer-events: none;
}

.gallery-btn:active {
  background-color: #000;
}

@media (max-width: 767px) {
  .logo-desktop {
    display: none;
  }

  .logo-mobile {
    display: block;
  }
}

